--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9090
 
-spring.mvc.view.prefix=/WEB-INF/jsps/
-spring.mvc.view.suffix=/.jsp
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
 
 #db specific properties
 spring.datasource.url=jdbc:mysql://localhost:3306/userDB
@@ -16,6 +16,4 @@ spring.datasource.password=root
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
